generalize services classes (#70)
Signed-off-by: Mathieu DEHARBE <mathieu.deharbe@rte-france.com>